--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -111,7 +111,7 @@
 	<tr><td colspan="5" class="empty"><em>No contacts to display</em></td></tr>
 </script>
 <script type="text/x-handlebars-template" id='contact-edit-template' charset="utf-8">
-	<form id="contact_form">
+	<form id="contact_form" class="edit_form_floated">
 	<label for="observer_id"><span class="label">Monitor ID</span> <input type="text" id="observer_id" name="observer_id" class="input_smoke field" value="{{observer_id}}"></label>
 	<label for="name"><span class="label">Name</span> <input type="text" name="name" id="name" class="input_smoke field" value="{{name}}"></label>
 	<label for="role"><span class="label">Role</span> <select name="role" id="role" class="input_smoke field">
