relocated the app to the site root

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -21,7 +21,7 @@
 	$(function() {
 		new WebappRouter();
 		new ZambiaRouter();
-		Backbone.history.start({root: '/home/'});
+		Backbone.history.start();
 	});
 </script>
 <style type="text/css" media="screen">
