feature: incidents list display

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -123,7 +123,7 @@
 	<td>{{observer_id}}</td><td>{{name}}</td><td>{{role.name}}</td><td>{{connections.models.0.attributes.identity}}</td><td>{{location.attributes.name}} ({{location.attributes.type.name}})</td><td>{{partner}}</td><td style="text-align:center"><a href="#!/contact/{{id}}">Edit</a></td>
 </script>
 <script type="text/x-handlebars-template" id="contact-empty-template" charset="utf-8">
-	<tr><td colspan="5" class="empty"><em>No contacts to display</em></td></tr>
+	<tr><td colspan="7" class="empty"><em>No contacts to display</em></td></tr>
 </script>
 <script type="text/x-handlebars-template" id='contact-edit-template' charset="utf-8">
 	<form id="contact_form" class="edit_form_floated">
@@ -150,6 +150,30 @@
 	</select></label>
 	<label for="submit"><span class="label">&nbsp;</span> <span class="btn_yellow btn_space"><input type="submit" name="submit" value="Save"><span>&nbsp;</span></span></label>
 	</form>
+</script>
+<script type="text/x-handlebars-template" id="incident-filter-template" charset="utf-8">
+	<div class="search_pane_dashboard">
+		<form id="search">
+		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" placeholder="Monitor Id" id="search_observer__observer_id__exact" pattern=".*[0-9]" title="Numeric figures only"></div>
+		<div class="input_el"><input type="text" name="date" class="input_smoke search_field date_field" placeholder="Date" id="search_date__exact"></div>
+		<div class="input_el"><input type="text" name="location" class="input_smoke" placeholder="Location" id="location__id"></div>
+		<div class="input_el">
+			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Filter" class="search_btn"><span>&nbsp;</span></span><span class="btn_gray"><a href="javascript:;" id="form_reset">Reset</a><span>&nbsp;</span></span>
+		</div>
+		</form>
+		<div class="clear"></div>
+	</div>
+</script>
+<script type="text/x-handlebars-template" id="incident-header-template" charset="utf-8">
+	<tbody>
+		<tr><th><a href="javascript:;" class="sortable_column" id="sort_observer__observer_id">PSID</a></th><th><a href="javascript:;" class="sortable_column" id="sort_date">Date</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__parent__parent__parent__name">Ward</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__parent__parent__name">Polling District</a></th><th><a href="javascript:;" class="sortable_column" id="sort_observer__name">Monitor</a></th><th style="text-align:center"><span>A</span></th><th style="text-align:center"><span>B</span></th><th style="text-align:center"><span>C</span></th><th style="text-align:center"><span>D</span></th><th style="text-align:center"><span>E</span></th><th style="text-align:center"><span>F</span></th><th style="text-align:center"><span>G</span></th><th style="text-align:center"><span>H</span></th><th style="text-align:center"><span>I</span></th><th style="text-align:center"><span>J</span></th><th style="text-align:center"><span>K</span></th><th style="text-align:center"><span>K1</span></th><th style="text-align:center"><span>K2</span></th><th style="text-align:center"><span>K4</span></th><th style="text-align:center"><span>L</span></th><th style="text-align:center"><span>M</span></th><th style="text-align:center"><span>N</span></th><th style="text-align:center"><span>O</span></th><th style="text-align:center">Edit</th></tr>
+	</tbody>
+</script>
+<script type="text/x-handlebars-template" id="incident-template" charset="utf-8">
+	<td>{{observer.attributes.observer_id}}</td><td>{{date}}</td><td>{{location.attributes.parent.attributes.parent.attributes.parent.attributes.name}}</td><td>{{location.attributes.parent.attributes.parent.attributes.name}}</td><td>{{observer.attributes.name}}{{#if observer.attributes.connections.models}} (<strong>{{observer.attributes.connections.models.0.attributes.identity}}</strong>){{/if}}</td><td align="center">{{incident_flag response "A"}}</td><td align="center">{{incident_flag response "B"}}</td><td align="center">{{incident_flag response "C"}}</td><td align="center">{{incident_flag response "D"}}</td><td align="center">{{incident_flag response "E"}}</td><td align="center">{{incident_flag response "F"}}</td><td align="center">{{incident_flag response "G"}}</td><td align="center">{{incident_flag response "H"}}</td><td align="center">{{incident_flag response "I"}}</td><td align="center">{{incident_flag response "J"}}</td><td align="center">{{incident_flag response "K"}}</td><td align="center">{{incident_flag response "K1"}}</td><td align="center">{{incident_flag response "K2"}}</td><td align="center">{{incident_flag response "K4"}}</td><td align="center">{{incident_flag response "L"}}</td><td align="center">{{incident_flag response "M"}}</td><td align="center">{{incident_flag response "N"}}</td><td align="center">{{incident_flag response "O"}}</td><td align="center">Edit</td>
+</script>
+<script type="text/x-handlebars-template" id="incident-empty-template" charset="utf-8">
+	<tr><td colspan="24" class="empty"><em>No incidents to display</em></td></tr>
 </script>
 <script type="text/javascript" charset="utf-8">
 	function checklist_setup_complete(response) {
@@ -276,6 +300,13 @@
 			return new Handlebars.SafeString('<img src="/assets/images/caution.png" alt="partial" />');
 		}
 	});
+	Handlebars.registerHelper('incident_flag', function (responses, attribute) {
+		if (responses.get(attribute)) {
+			return new Handlebars.SafeString('<img src="/assets/images/red_dot.png" />');
+		} else {
+			return new Handlebars.SafeString('&nbsp;');
+		}
+	});
 	
 	Templates = (typeof(Templates) == 'undefined') ? {} : Templates;
 	Templates.ChecklistFilter = Handlebars.compile($('#checklist-filter-template').html());
@@ -288,4 +319,8 @@
 	Templates.ContactEmpty = Handlebars.compile($('#contact-empty-template').html());
 	Templates.ContactHeader = Handlebars.compile($('#contact-header-template').html());
 	Templates.ContactEdit = Handlebars.compile($('#contact-edit-template').html());
+	Templates.IncidentFilter = Handlebars.compile($('#incident-filter-template').html());
+	Templates.IncidentHeader = Handlebars.compile($('#incident-header-template').html());
+	Templates.Incident = Handlebars.compile($('#incident-template').html());
+	Templates.IncidentEmpty = Handlebars.compile($('#incident-empty-template').html());
 </script>
