--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1324,7 +1324,7 @@ ol#commentslist {
 	height: 25px;
 }
 
-.btn_gray_input input, .btn_gray a, .btn_yellow a, .btn_green a, .btn_red a, .btn_blue a, .btn_blue input, .btn_yellow input  {
+.btn_gray_input input, .btn_gray a, .btn_yellow a, .btn_green a, .btn_red a, .btn_blue a, .btn_blue input, .btn_red input, .btn_green input, .btn_yellow input  {
 	float: left;
 	height: 25px;
 	line-height: 25px;
@@ -1366,19 +1366,19 @@ ol#commentslist {
 .btn_gray {
 	background: url(../images/gray_left.png) no-repeat;
 }
-.btn_gray a {
+.btn_gray a, .btn_gray input {
 	background: url(../images/gray.png) repeat-x left top;
 }
 .btn_gray span {
 	background: url(../images/gray_right.png) no-repeat;
 }
-.btn_gray a:hover { 
+.btn_gray a:hover, .btn_gray input:hover, .btn_gray input[disabled='disabled'] { 
 	background: url(../images/gray_hover.png) repeat-x left top;
 }
-.btn_gray:hover {
+.btn_gray:hover, .btn_gray.disabled {
 	background: url(../images/gray_left_hover.png) no-repeat;
 }
-.btn_gray:hover span {
+.btn_gray:hover span, .btn_gray.disabled span {
 	background: url(../images/gray_right_hover.png) no-repeat;
 }
 
@@ -1393,13 +1393,13 @@ ol#commentslist {
 .btn_yellow span {
 	background: url(../images/yellow_right.png) no-repeat;
 }
-.btn_yellow a:hover, .btn_yellow input:hover { 
+.btn_yellow a:hover, .btn_yellow input:hover, .btn_yellow input[disabled='disabled'] { 
 	background: url(../images/yellow_hover.png) repeat-x left top;
 }
-.btn_yellow:hover {
+.btn_yellow:hover, .btn_yellow.disabled {
 	background: url(../images/yellow_left_hover.png) no-repeat;
 }
-.btn_yellow:hover span {
+.btn_yellow:hover span, .btn_yellow.disabled span {
 	background: url(../images/yellow_right_hover.png) no-repeat;
 }
 
@@ -1408,19 +1408,19 @@ ol#commentslist {
 .btn_green {
 	background: url(../images/green_left.png) no-repeat;
 }
-.btn_green a {
+.btn_green a, .btn_green input {
 	background: url(../images/green.png) repeat-x left top;
 }
 .btn_green span {
 	background: url(../images/green_right.png) no-repeat;
 }
-.btn_green a:hover { 
+.btn_green a:hover, .btn_green input:hover, .btn_green input[disabled='disabled'] { 
 	background: url(../images/green_hover.png) repeat-x left top;
 }
-.btn_green:hover {
+.btn_green:hover, .btn_green.disabled {
 	background: url(../images/green_left_hover.png) no-repeat;
 }
-.btn_green:hover span {
+.btn_green:hover span, .btn_green.disabled span {
 	background: url(../images/green_right_hover.png) no-repeat;
 }
 
@@ -1429,19 +1429,19 @@ ol#commentslist {
 .btn_red {
 	background: url(../images/red_left.png) no-repeat;
 }
-.btn_red a {
+.btn_red a, .btn_red input {
 	background: url(../images/red.png) repeat-x left top;
 }
 .btn_red span {
 	background: url(../images/red_right.png) no-repeat;
 }
-.btn_red a:hover { 
+.btn_red a:hover, .btn_red input:hover, .btn_red input[disabled='disabled'] { 
 	background: url(../images/red_hover.png) repeat-x left top;
 }
-.btn_red:hover {
+.btn_red:hover, .btn_red.disabled {
 	background: url(../images/red_left_hover.png) no-repeat;
 }
-.btn_red:hover span {
+.btn_red:hover span, .btn_red.disabled span {
 	background: url(../images/red_right_hover.png) no-repeat;
 }
 
@@ -1456,13 +1456,13 @@ ol#commentslist {
 .btn_blue span {
 	background: url(../images/blue_right.png) no-repeat;
 }
-.btn_blue a:hover, .btn_blue input:hover { 
+.btn_blue a:hover, .btn_blue input:hover, .btn_blue input[disabled='disabled'] { 
 	background: url(../images/blue_hover.png) repeat-x left top;
 }
-.btn_blue:hover {
+.btn_blue:hover, .btn_blue.disabled {
 	background: url(../images/blue_left_hover.png) no-repeat;
 }
-.btn_blue:hover span {
+.btn_blue:hover span, .btn_blue.disabled span {
 	background: url(../images/blue_right_hover.png) no-repeat;
 }
 
@@ -1767,3 +1767,12 @@ select.input_smoke {height:26px;width:174px;}
 div.input_el {float:left; margin-right:10px;margin-bottom:1.5em;}
 div.clear {clear:left;}
 .btn_space {margin-right:8px;}
+
+#facebox .content table tr td, #facebox .content table tr th {
+	padding: 2px;
+}
+
+#facebox .content textarea {
+	background-color: whiteSmoke;
+	padding: 5px;
+}
