--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -50,6 +50,14 @@
 <script type="text/x-handlebars-template" id="message-empty-template" charset="utf-8">
 	<tr><td colspan="5" class="empty"><em>No messages to display</em></td></tr>
 </script>
+<script type="text/x-handlebars-template" id="sms-blaster-template" charset="utf-8">
+	<div id="sms">
+		<table>
+			<tr><th valign="top">Message</th><td><textarea name="message" class="message" rows="5" cols="40"></textarea></td></tr>
+			<tr><th>&nbsp;</th><td><span class="btn_yellow" id="send_btn_wrapper"><input type="button" name="send_btn" id="send_btn" value="Send"><span>&nbsp;</span></span> <img src="/assets/images/fb_loader.gif" id="send_indicator" height="11" width="16" style="margin-left:8px;margin-top:7px;display:none" /> <span id="send_status" style="background-color:#FDFFB5;font-weight:bold;padding:3px;margin-top:3px;margin-left:8px;display:none;"></span></td></tr>
+		</table>
+	</div>
+</script>
 <script type="text/javascript" charset="utf-8">
 	Handlebars.registerHelper('safe', function (text) {
 		if (text) {
@@ -64,4 +72,5 @@
 	Templates.Message = Handlebars.compile($('#message-template').html());
 	Templates.MessageEmpty = Handlebars.compile($('#message-empty-template').html());
 	Templates.MessageHeader = Handlebars.compile($('#message-header-template').html());
+	Templates.SMSBlaster = Handlebars.compile($('#sms-blaster-template').html());
 </script>
